# assist_sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
assist_sim/: __init__.py  __main__.py  cache.py  combine.py  config.py  errors.py  loading.py  preprocess.py  registry.py  utils.py  validate.py
assist_sim/models/DephyExoBoot/: L1config.yaml
assist_sim/models/DephyExoBoot/mesh/: exo_1_r.stl
assist_sim/models/HMEDI/: L1config.yaml  L1model.xml
assist_sim/models/Humotech/: L1model.xml
assist_sim/models/OpenSourceLeg/: A_L1config.yaml  A_L1model.xml  KA_L1config.yaml
assist_sim/models/Tutorial/: L1config.yaml  L1model.xml
docs/: available-models.md  concepts.md  device-config-reference.md  getting-started.md  troubleshooting.md  usage.md
docs/how-to/: add-a-device.md  add-an-msk-model.md  debug-a-combined-model.md  export-and-load.md  modify-an-msk-config.md  use-custom-devices.md
examples/: quickstart.py
models/DephyExoBoot/: L1model.xml
models/DephyExoBoot/mesh/: exo_1_l.stl  exo_2_l.stl  exo_2_r.stl
models/Humotech/: L1config.yaml
models/OpenExo/: L1config.yaml  L1model.xml
models/OpenSourceLeg/: A_L1config.yaml  KA_L1model.xml
models/OpenSourceLeg/mesh/: osl_generic_socket_enlarged.stl
tests/: conftest.py  test_attach_dedup.py  test_caching.py  test_keyframe_pruning.py  test_per_msk_overrides.py  test_preprocess.py  test_registry.py  test_smoke_combinations.py  test_tendon_mods.py  test_terrain_strip.py  test_validator.py
tests/fixtures/: minimal_device.xml  minimal_device_config.yaml  minimal_human.xml
